[package]
name = "mapdb-collections"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "High-performance primitive collections for Rust"
license = "EPL-1.0"

# Library proper has zero dependencies. serde + serde_json are used by the
# `validate` and `nanprobe` binaries under src/bin/, which read JSON scenarios
# for the cross-language validation harness.
[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
kata = []
validation = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "validate"
path = "src/bin/validate.rs"
required-features = ["validation"]

[[bin]]
name = "nanprobe"
path = "src/bin/nanprobe.rs"

[dev-dependencies]
